<resources>
    <string name="app_name">Netflix</string>
    <string name="menu_episodios">Episódios</string>
    <string name="menu_avaliacoes">Avaliações</string>
    <string name="temporada_episodio">S5:E8</string>
    <string name="nome_serie">The Vampire Diaries</string>
    <string name="menu_mensagem">Mensagem</string>
    <string name="menu_volume">Volume</string>
    <string name="menu_avalia_es">Avaliações</string>
</resources>